# bowii

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Version.h.in  main.cpp
.devcontainer/: devcontainer.json  docker-compose.yml  dockerfile
include/private/: constants.h  utils.h
include/public/bowii/: BVector.h  MathVector.h  utils.h  vectorii.h
lib/bowii/: CMakeLists.txt  utils.cpp  utils.h  vectorii.cpp  vectorii.h
lib/src/: vectorii.cpp
src/: BVector.cpp  CMakeLists.txt  MathVector.cpp  utils.cpp  vectorii.cpp
test/: BVectorTests.cpp  CMakeLists.txt  MathVectorTests.cpp
test/src/: CMakeLists.txt
